fixed z-index problem with join caused by adding the bg img

--- a/app/styles/_join.scss
+++ b/app/styles/_join.scss
@@ -14,7 +14,7 @@ $join-height: 500px;
   position: relative;
   top: 0;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
 }
 
 .join-inner {
